# dotfiles

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml  ci.yml  publish.yaml
configs/: linux.yaml  mac.yaml
dotfiles/: __init__.py  cli.py  config.py  installer.py
files/scripts/: tmux-sessionizer
files/zsh/: .zsh_profile  .zshrc
tests/: __init__.py  test_config.py  test_installer.py
