[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotfiles-installer"
version = "1.0.0"
description = "A CLI tool to install dotfiles configurations from YAML"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Riley Rice", email = "riceriley59@gmail.com" }
]
keywords = ["dotfiles", "configuration", "cli", "automation", "setup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Installation/Setup",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/riceriley59/dotfiles"
Repository = "https://github.com/riceriley59/dotfiles"
Issues = "https://github.com/riceriley59/dotfiles/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.4",
    "types-PyYAML>=6.0",
]

[project.scripts]
dotfiles = "dotfiles.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["dotfiles"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
files = ["dotfiles", "tests"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["dotfiles", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
